tests/requests/errors/forbidden.req
GET /no_right.txt HTTP/1.1
Host: localhost:8080